fix email templates

--- a/templates/order.html
+++ b/templates/order.html
@@ -2,7 +2,7 @@
 <html>
    <body>
       <div>
-         <img src='http://digiservdelivery.lib.virginia.edu/lib_letterhead.jpg' style="width:640px; height:64px;">
+         <img src='http://digiservdelivery.lib.virginia.edu/lib_letterhead.jpg' width='640' height='64'>
       </div>
       <h2>University of Virginia Digital Production Group</h2>
       <p>
