try to embed the uva image in email to see if it shows up when delivered

--- a/templates/fees.html
+++ b/templates/fees.html
@@ -2,7 +2,7 @@
 <html>
    <body>
       <div>
-         <img src='http://digiservdelivery.lib.virginia.edu/lib_letterhead.jpg' width='640' height='64'>
+         <img src='cid:lib_letterhead.jpg' width='640' height='64'>
       </div>
       <p>
          Dear {{.FirstName}} {{.LastName}},
