remove header image for emails. replace with text

--- a/templates/fees.html
+++ b/templates/fees.html
@@ -2,7 +2,8 @@
 <html>
    <body>
       <div>
-         <img src='cid:lib_letterhead.jpg' width='640' height='64'>
+         <h2 style="margin-bottom: 5px;">University of Virginia Library</h2>
+         <h3 style="margin-top:5px;">University of Virginia Digital Production Group</h3>
       </div>
       <p>
          Dear {{.FirstName}} {{.LastName}},
