--- a/templates/order.html
+++ b/templates/order.html
@@ -2,9 +2,9 @@
 <html>
    <body>
       <div>
-         <img src='cid:lib_letterhead.jpg' width='640' height='64'>
+         <h2 style="margin-bottom: 5px;">University of Virginia Library</h2>
+         <h3 style="margin-top:5px;">University of Virginia Digital Production Group</h3>
       </div>
-      <h2>University of Virginia Digital Production Group</h2>
       <p>
          Dear {{.FirstName}} {{.LastName}},<br/>
          Your digital request is now available and may be downloaded using the links below:
