cleanup email templates. stub call to create patron deliverables

--- a/templates/order.html
+++ b/templates/order.html
@@ -3,7 +3,9 @@
    <body>
       <div>
          <h2 style="margin-bottom: 5px;">University of Virginia Library</h2>
-         <h3 style="margin-top:5px;">University of Virginia Digital Production Group</h3>
+         <h3 style="margin:5px 0 20px 0;background:transparent;border-bottom:1px solid black;padding-bottom:10px;">
+            University of Virginia Digital Production Group
+         </h3>
       </div>
       <p>
          Dear {{.FirstName}} {{.LastName}},<br/>
@@ -30,7 +32,7 @@
          <a href="mailto:digitalservices@virginia.edu">digitalservices@virginia.edu</a>.
       </p>
 
-      <h3>Material Usage Information</h3>
+      <h3 style="margin:30px 0 0 0;background:transparent;">Material Usage Information</h3>
       <p>
          For more information regarding the use, reproduction and publication of materials,
          please refer to the guidelines provided by Special Collections at:
