added some more logging to email sends

--- a/templates/order.html
+++ b/templates/order.html
@@ -32,7 +32,7 @@
          <a href="mailto:digitalservices@virginia.edu">digitalservices@virginia.edu</a>.
       </p>
 
-      <h3 style="margin:30px 0 0 0;background:transparent;">Material Usage Information</h3>
+      <h3 style="margin:30px 0 10px 0;background:transparent;">Material Usage Information</h3>
       <p>
          For more information regarding the use, reproduction and publication of materials,
          please refer to the guidelines provided by Special Collections at:
