--- a/templates/pdf_ordersummary.html
+++ b/templates/pdf_ordersummary.html
@@ -57,7 +57,7 @@
                <tr>
                   <th>Filename</th>
                   <th>Title</th>
-                  <th>Descritption</th>
+                  <th>Description</th>
                </tr>
                {{range .Files}}
                <tr>
@@ -77,7 +77,7 @@
                      <tr>
                         <th>Filename</th>
                         <th>Title</th>
-                        <th>Descritption</th>
+                        <th>Description</th>
                      </tr>
                      {{range .Files}}
                      <tr>
