typo in fee email

--- a/templates/fees.html
+++ b/templates/fees.html
@@ -62,7 +62,7 @@
       </p>
       <p>
          Please be sure you read and understand the Special Collections use, reproduction, and publication policies.
-         The policies can be found at <a href="http://small.library.virginia.edu/services/reproduction/">http://small.library.virginia.edu/services/reproduction/"</a>.
+         The policies can be found at <a href="http://small.library.virginia.edu/services/reproduction/">http://small.library.virginia.edu/services/reproduction/</a>.
          You are responsible for adhering to these policies.
       </p>
       <p>
