digiservdelivery urls now use https instead of http. dep updates

--- a/templates/pdf_ordersummary.html
+++ b/templates/pdf_ordersummary.html
@@ -25,7 +25,7 @@
    </head>
    <body>
       <div class="header">
-         <img src='http://digiservdelivery.lib.virginia.edu/lib_letterhead.jpg' style="width:640px; height:64px;">
+         <img src='https://digiservdelivery.lib.virginia.edu/lib_letterhead.jpg' style="width:640px; height:64px;">
          <p style="margin:3px 0;text-align: center;">Digital Production Group, University of Virginia Library</p>
          <p style="margin:3px 0;text-align: center;">Post Office Box 400155, Charlottesville, Virginia 22904 U.S.A.</p>
          <p style="text-align:right;">Order: {{.OrderID}}</p>
