rework audit logic. added checksum exists audit

--- a/templates/audit.html
+++ b/templates/audit.html
@@ -41,6 +41,10 @@
             <span>{{.MissingArchiveCount}}</span>
          </div>
          <div>
+            <label class="label">Missing Checksum:&nbsp;</label>
+            <span>{{.MissingChecksumCount}}</span>
+         </div>
+         <div>
             <label class="label">Checksum Mismatch:&nbsp;</label>
             <span>{{.ChecksumErrorCount}}</span>
          </div>
