phash is generated by year. added support for png, jpg, gif and tif

--- a/templates/phash.html
+++ b/templates/phash.html
@@ -2,7 +2,7 @@
 <html>
    <body>
       <h2>
-         Master files pHash generation has completed.
+         Master files pHash generation for year {{.Year}} has completed.
       </h2>
       <div>
          <h3>Generation Summary</h3>
