cleanup more references to pdf summary

--- a/templates/order.html
+++ b/templates/order.html
@@ -18,7 +18,7 @@
       </p>
       {{end}}
 
-      <p>The PDF included in the above list contains all metadata and descriptive information about your digital order.</p>
+      <p>The order summary included in the above list contains all metadata and descriptive information about your digital order.</p>
       <p>*** Please note that your image files will only be available for the next 30 days ***</p>
 
       {{if .Fee}}
