new text for fee estimate email

--- a/templates/fees.html
+++ b/templates/fees.html
@@ -9,9 +9,12 @@
          Dear {{.FirstName}} {{.LastName}},
       </p>
       <p>
-         Thank you again for your request.  Below you will find the fee for your digitization request.
-         We calculated the fee by charging $50.00 for the first hour (or any part thereof) and $25.00 for each additional hour of expected work.
-         Based  on our calculations, your fee is listed here:
+         Thank you again for your request. Below you will find the fee for your digitization request.
+         We calculated the fee by charging $100.00 for the first hour (which includes a processing fee of $50) and $50.00 for each additional
+         hour (or partial hour) of expected work. Costs are calculated based on the length of time required for retrieval, identification, imaging,
+         quality assurance, metadata creation, and delivery. If your request is for items already archived in our system, we will only
+         charge for an hour (or more if it takes more than an hour) to retrieve the items from our system.
+         Estimates are good for 30 days.
       </p>
       <p>
          <h4>Digitization Fee: ${{.Fee}}</h4>
